modeified file index.html todolist

--- a/1-To Do List/index.html
+++ b/1-To Do List/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div id="newtask">
             <input type="text" placeholder=" Task to be done">
-            <button id="push">Add Task</button>
+            <button id="push">Add</button>
         </div>
     </div>
     <script src="./script.js"></script>
