--- a/1-To Do List/index.html
+++ b/1-To Do List/index.html
@@ -9,6 +9,8 @@
      <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <!--Font Awesome CDN-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <!-- Stylesheet import -->
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -18,7 +20,9 @@
             <input type="text" placeholder=" Task to be done">
             <button id="push">Add</button>
         </div>
+        <div id="tasks"></div>
     </div>
+    
     <script src="./script.js"></script>
 </body>
 </html>
