--- a/viewallprojectlive.html
+++ b/viewallprojectlive.html
@@ -1,1 +1,16 @@
-you can view all Project as link, once you touch the link you can visit project as live and you can find the code inside the folder
+<!-- you can view all Project as link, once you touch the link you can visit project as live and you can find the code inside the folder -->
+<!DOCTYPE html>
+<html>
+<head>
+    <title>View All Project Live</title>
+</head>
+<body>
+    <h1>My 2000 Projects</h1>
+    <ul>
+        <li><a href="folder1/">Folder 1</a></li>
+        <li><a href="folder2/">Folder 2</a></li>
+        <li><a href="folder3/">Folder 3</a></li>
+        <!-- Continue for all folders -->
+    </ul>
+</body>
+</html>
